objects/tffa__Eligibility__c.object
<CustomObject>
    <description>Captures eligibility criteria for the submission in the form of question and answer. Credit Union membership eligibility  is an example  .</description>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier. Typically derived from QuestionTemplate.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LinkedApplication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to application.</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Eligibilities</relationshipLabel>
        <relationshipName>LinkedEligibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__LongValue__c</fullName>
        <description>The full value of the answer captured in case it spans over 255 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Long value</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to Submission object</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Eligibilities</relationshipLabel>
        <relationshipName>Eligibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ValueName__c</fullName>
        <description>The display text for the answer captured. Useful when the answer is an item in a picklist. In such cases, item label is stored in this field for reference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ValueType__c</fullName>
        <defaultValue>&quot;TEXT&quot;</defaultValue>
        <description>The type for the answer captured.</description>
        <label>Value type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AnswerType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Value captured</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Eligibility</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>